--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,19 @@ nav ul li a:hover {
     background-color: #111;
 }
 
+nav ul li a i {
+    font-size: 24px; /* Tamaño del ícono */
+    margin-right: 8px; /* Espacio entre el ícono y el texto */
+}
+
+#carrito-count {
+    font-size: 16px; /* Tamaño del número del carrito */
+    background-color: #007bff;
+    color: white;
+    padding: 2px 6px;
+    border-radius: 12px;
+}
+
 section {
     padding: 2em;
     margin: 2em auto;
