--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ nav {
     display: flex;
     justify-content: space-between; /* Distribuye los elementos a lo largo del espacio disponible */
     align-items: center;
+    padding: 0 20px; /* Añade un poco de relleno a los lados */
 }
 
 nav ul {
@@ -36,11 +37,11 @@ nav ul {
 }
 
 nav ul.nav-left {
-    margin-left: auto; /* Empuja la lista de la izquierda al final del contenedor flex */
+    display: flex; /* Alinea los elementos dentro de esta lista horizontalmente */
 }
 
 nav ul.nav-left li {
-    float: none; /* Asegura que los elementos de la lista no floten */
+    margin-left: 20px; /* Espacio entre los elementos del menú */
 }
 
 nav ul.nav-left li a {
@@ -55,11 +56,11 @@ nav ul.nav-left li a:hover {
 }
 
 nav ul.nav-right {
-    margin-right: auto; /* Empuja la lista de la derecha al inicio del contenedor flex */
+    display: flex; /* Alinea los elementos dentro de esta lista horizontalmente */
 }
 
 nav ul.nav-right li {
-    float: none;
+    margin-right: 20px; /* Espacio entre los elementos del menú */
 }
 
 nav ul.nav-right li a {
