--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body {
 
 /* Cabecera */
 header {
-    background-color: #333;
+    background-color: #CECFCE;
     color: white;
     padding: 1em;
     text-align: center;
@@ -47,11 +47,11 @@ nav ul.nav-left li {
 nav ul.nav-left li a {
     padding: 14px 20px;
     text-decoration: none;
-    color: black; /* Color negro para los enlaces */
+    color:  #000000 ; /* Color negro para los enlaces */
 }
 
 nav ul.nav-left li a:hover {
-    background-color: #111;
+    background-color: #f4f4f4;
     color: white; /* Cambia el color del texto al pasar el ratón */
 }
 
@@ -68,7 +68,7 @@ nav ul.nav-right li a {
     align-items: center;
     padding: 14px 20px;
     text-decoration: none;
-    color: black; /* Color negro para el texto del carrito */
+    color: #000000; /* Color negro para el texto del carrito */
 }
 
 /* Ajustar el ícono del carrito */
@@ -79,7 +79,7 @@ nav ul.nav-right i {
 
 #carrito-count {
     font-size: 16px; /* Tamaño del número del carrito */
-    background-color: #007bff;
+    background-color: #EBEBEB;
     color: white;
     padding: 2px 6px;
     border-radius: 12px;
