--- a/styles.css
+++ b/styles.css
@@ -156,7 +156,7 @@ button:hover {
 }
 
 #comprar-btn:hover {
-    background-color: #0056b3;
+    background-color: #000000;
 }
 
 /* Estilo para los botones de quitar artículo (color rojo) */
