--- a/styles.css
+++ b/styles.css
@@ -25,8 +25,16 @@ nav ul.nav-left {
     float: left;
 }
 
-nav ul.nav-right {
-    float: right;
+nav ul.nav-right li {
+    float: none;
+}
+
+nav ul.nav-right li a {
+    display: flex;
+    align-items: center;
+    padding: 14px 20px;
+    text-decoration: none;
+    color: black; /* Color negro para el texto del carrito */
 }
 
 nav ul li {
@@ -63,7 +71,7 @@ section {
 }
 
 button {
-    background-color: #333;
+    background-color: #000000;
     color: #fff;
     border: none;
     padding: 0.5rem 1rem;
@@ -113,7 +121,7 @@ button:hover {
 }
 
 footer {
-    background-color: #333;
+    background-color: #EBEBEB;
     color: #fff;
     text-align: center;
     padding: 1rem;
@@ -158,6 +166,6 @@ footer {
     background: none;
     border: none;
     font-size: 24px;
-    color: #000;
+    color: #000000;
     cursor: pointer;
 }
