--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/* Estilos generales */
 body {
     font-family: 'Arial', sans-serif;
     margin: 0;
@@ -41,6 +42,7 @@ section {
     max-width: 800px;
 }
 
+/* Estilos para los productos */
 .producto {
     display: inline-block;
     margin: 10px;
@@ -60,16 +62,60 @@ button:hover {
     background-color: #218838;
 }
 
+/* Estilos específicos para la página del carrito */
 #carrito-items div {
-    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 15px;
 }
 
+#carrito-items img {
+    margin-right: 10px;
+    vertical-align: middle;
+    width: 100px;
+}
+
+#carrito-items p {
+    margin: 0;
+    font-size: 18px;
+}
+
+/* Estilo para el botón de "Comprar" */
+#comprar-btn {
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#comprar-btn:hover {
+    background-color: #0056b3;
+}
+
+/* Estilo para los botones de quitar artículo (color rojo) */
+.remove-item {
+    background-color: #dc3545; /* Rojo */
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    cursor: pointer;
+    margin-left: 15px; /* Añade espacio entre el texto del producto y el botón */
+    transition: background-color 0.3s ease;
+}
+
+.remove-item:hover {
+    background-color: #c82333; /* Rojo más oscuro al hacer hover */
+}
+
+/* Estilos del pie de página */
 footer {
     text-align: center;
     padding: 1em;
     background-color: #333;
     color: white;
-    position: absolute;
+    position: relative;
     width: 100%;
     bottom: 0;
 }
